--- a/src/app/dashboard/(auth)/register/page.module.css
+++ b/src/app/dashboard/(auth)/register/page.module.css
@@ -32,3 +32,10 @@
     border-radius: 5px;
     font-size: 20px;
 }
+
+.link{
+    background-color: white;
+    padding: 10px 30px;
+    border-radius: 3px;
+    color: #49b07d;
+  }
