dashboard and some style modified

--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -16,8 +16,8 @@
   
   .imgContainer {
     width: 200px;
-    height: 100px;
-    position: Ū;
+    height: 170px;
+    position: relative;
   }
   
   .img {
