--- a/src/app/blog/[id]/page.module.css
+++ b/src/app/blog/[id]/page.module.css
@@ -3,6 +3,7 @@
 }
 .top {
   display: flex;
+  gap: 50px;
 }
 
 .info {
@@ -40,6 +41,7 @@
 
 .image {
   object-fit: cover;
+  border-radius: 5px;
 }
 
 .content {
